--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node src/server.js",
     "dev": "nodemon --watch src --exec node src/server.js",
     "lint": "eslint .",
-    "seed": "node scripts/seed-admin.js"
+    "seed": "node src/scripts/seed-admin.js",
+    "seed:products": "node src/scripts/seedProducts.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.1",
     "bullmq": "^5.65.1",
@@ -24,10 +26,11 @@
     "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6",
     "stripe": "^20.0.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "eslint": "^9.39.1"
+    "eslint": "^9.39.1",
+    "nodemon": "^3.1.11"
   }
 }
