--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
+    "nanoid": "^5.1.6",
     "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6",
     "stripe": "^20.0.0",
