--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "nodemailer": "^7.0.11",
+    "puppeteer": "^24.34.0",
     "razorpay": "^2.9.6",
     "stripe": "^20.0.0",
     "uuid": "^13.0.0",
